[package]
name = "apirec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
salvo = { version = "*", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "local-time",
] }
tracing-appender = "0.2"
once_cell = "1"
time = { version = "0.3", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
parking_lot = { version = "0.12", features = ["nightly"] }
sqlx = { version = "0.7.0-alpha.3", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
] }
base58-monero = { version = "1", default-features = false }
hashbrown = { version = "0.13", features = ["serde", "nightly"] }

[dev-dependencies]
futures = "0.3"

[target.'cfg(unix)'.dependencies]
openssl = { version = '0.10', features = ["vendored"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
