[package]
name = "apirec"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "*", features = ["full"] }
axum = "0.6"
axum-extra = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
tracing-appender = "0.2"
once_cell = "1"
time = { version = "0.3", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
parking_lot = { version = "0.12", features = ["nightly"] }
tower-http = { version = "0.4", features = ["cors"] }
sqlx = { version = "0.7.0-alpha.3", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
] }
hashbrown = { version = "0.14", features = ["serde", "nightly"] }
bs58 = "0.5"

[dev-dependencies]
futures = "0.3"

[target.'cfg(unix)'.dependencies]
openssl = { version = '0.10', features = ["vendored"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
